http-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-delopment
  namespace: http-server
  labels:
    app: http-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      namespace: http-server
      labels:
        app: http-server
    spec:
      terminationGracePeriodSeconds: 15
      containers:
      - name: http-server
        image: fjm798301603/http-server:v1.2.2
        ports:
        - name: http-port
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: http-port
          periodSeconds: 3
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /healthz
            port: http-port
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: http-port
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: http-service
  namespace: http-server
  labels:
    app: http-server
spec:
  selector:
    app: http-server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
