http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: http-server
  labels:
    app: ingress-nginx
spec:
  tls:
    - hosts:
      - example.server.com
      secretName: tls-secret
  ingressClassName: nginx
  rules:
    - host: example.server.com
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: http-service
              port:
                number: 80
